--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Cecilia Web</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/estylo.css" rel="stylesheet">
@@ -60,7 +60,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/01.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="img/01.jpg" alt="imagen1">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -78,7 +78,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/02.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="img/02.jpg" alt="imagen2">
           </div>
         </div>
         <div class="col-lg-6">
@@ -96,7 +96,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="img/03.jpg" alt="imagen3">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -118,8 +118,8 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="css/vendor/jquery/jquery.min.js"></script>
+  <script src="css/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
