--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cecilia Web</title>
+    <title>Cecilia Web Art</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link rel="shortcut icon" href="milogo.ico" type="image/x-icon">
   <link href="css/estylo.css" rel="stylesheet">
 
 </head>
