--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cecilia Web</title>
+    <link rel="shortcut icon" href="milogo.ico" type="image/x-icon">
+    <title>Cecilia Web Art</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
